<!--
  ~ Created  by Unbegrenzt for Jorge Luis Morales Centeno on 06-03-17 12:29 PM
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last modified 05-08-17 10:42 PM
  -->

<resources>
    <string name="app_name">PharmaSOS</string>
    <string name="facebook_app_id" translatable="false">214759825709607</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb214759825709607</string>
    <string name="Máx_preg">Máximo de preguntas excedido</string>

    <string name="MergedAppBarLayoutBehavior" translatable="false">com.example.unbegrenzt.fharmaapp.behavior.MergedAppBarLayoutBehavior
    </string>
    <string name="ScrollAwareFABBehavior" translatable="false">com.example.unbegrenzt.fharmaapp.behavior.ScrollAwareFABBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike" translatable="false">
        com.example.unbegrenzt.fharmaapp.behavior.BottomSheetBehaviorGoogleMapsLike
    </string>
    <string name="BackDropBottomSheetBehavior" translatable="false">com.example.unbegrenzt.fharmaapp.behavior.BackdropBottomSheetBehavior
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explor_n_l_map">Explora el app</string>
    <string name="encuentra">Obtén información de un local</string>
    <string name="farma_q_busca">Libreria de fármacos</string>
    <string name="farmaco">Informate acerca del fármaco que nescesitas</string>
    <string name="no_conex">Sin conexión</string>
    <string name="toolbar_name">Sin conexión</string>
    <string name="ScrollingAppBarLayoutBehavior" translatable="false">
        com.example.unbegrenzt.fharmaapp.behavior.ScrollingAppBarLayoutBehavior
    </string>
    <string name="local_disp">puedes tenerlo todo de forma local en tu dispositivo</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="GOOGLE_KEY" translatable="false">AIzaSyCAiZV-EBK64MkSA3hJngBjACOjfgBY1jQ</string>

    <string name="action_settings">Settings</string>
    <string name="catalog">Catálogo</string>
    <string name="f_rmacos">Fármacos</string>
    <string name="comun_cate">Comunícate</string>
    <string name="comparte">Comparte</string>
    <string name="val_ranos">Valóranos</string>
    <string name="men">Menú</string>
    <string name="continuar">Continuar</string>
    <string name="hom">Home</string>
    <string name="map">Mapa</string>
    <string name="farm">Fármaco</string>
    <string name="per">Perfil</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="an">Aún no te has conectado!</string>
    <string name="least">Mínimo 3 caracteres</string>
    <string name="tu_no">Turno</string>
    <string name="get_ref_farma">farmacias</string>
    <string name="title_activity_farmacia" translatable="false">Farmacia</string>
    <string name="title_activity_maps_activityas" translatable="false">Map</string>
    <string name="title_activity_principal_map" translatable="false">FarmaSOS</string>
    <string name="intro1">Encuentra una farmacía abierta de forma ágil</string>
    <string name="intro2">Consulta información de esa farmacia en tiempo real</string>
    <string name="intro3">Haz compras electrónicas</string>
    <string name="title_activity_fmap" translatable="false">Home</string>
    <string name="key_binding_default_toolbar_name" translatable="false">toolbarname</string>
    <string name="mi_pos">mi posición</string>
    <string name="lc_mas_cerc">local más cercano</string>
    <string name="title_activity_main_map" translatable="false">Mapa</string>
    <string name="fondo">click para cambiar fondo</string>
    <string name="anm">Usuario anónimo</string>
    <string name="beha">com.example.unbegrenzt.fharmaapp.behavior.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="olv">Olvidar</string>
    <string name="keep">Guardar</string>
    <string-array name="local_type">
        <item>Farmacia</item>
        <item>Hospital</item>
        <item>Doctor</item>
        <item>Dentista</item>
    </string-array>
</resources>
