<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created  by unbegrenzt for Jorge Luis Morales Centeno on 09-24-17 11:30 AM
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last modified 09-24-17 11:30 AM
  -->

<android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorlayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".actividades.ggeasyy"
        app:layout_behavior="@string/beha"
        xmlns:custom="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/tienda"/>

    <FrameLayout
            android:id="@+id/dummy_framelayout_replacing_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.nipunbirla.boxloader.BoxLoaderView
                android:id="@+id/progress"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:strokeColor="@color/accent1"
                app:loaderColor="@color/accent2"
                android:visibility="gone"
                app:strokeWidth="20"
                app:speed="10"/>

    </FrameLayout>

    <com.github.ag.floatingactionmenu.OptionsFabLayout
            android:id="@+id/fab_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            custom:color="@color/accent1"
            custom:options_menu="@menu/fab_menu"
            custom:src="@drawable/ic_add"/>
    <!--</FrameLayout>-->
    <!--<fragment-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:id="@+id/support_map"-->
    <!--android:name="com.google.android.gms.maps.SupportMapFragment"/>-->

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_behavior="@string/ScrollingAppBarLayoutBehavior">

        <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary1"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/anchor_point"
            android:background="@color/color_acentuado"
            app:layout_behavior="@string/BackDropBottomSheetBehavior"
            android:fitsSystemWindows="true">
    </android.support.v4.view.ViewPager>

    <!--anchor point = 300-->
    <!--@dimen/bottom_sheet_peek_height = 80dp-->

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
            android:id="@+id/bottom_sheet"
            app:layout_behavior="@string/BottomSheetBehaviorGoogleMapsLike"
            app:anchorPoint="@dimen/anchor_point"
            app:behavior_hideable="true"
            android:fitsSystemWindows="true">

        <include
                layout="@layout/bottom_sheet_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"/>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/bottom_sheet"
            app:layout_anchorGravity="top|right|end"
            android:src="@drawable/ic_action_go"
            android:layout_margin="@dimen/fab_margin"
            app:layout_behavior="@string/ScrollAwareFABBehavior"
            android:clickable="true"/>

    <android.support.design.widget.AppBarLayout
            android:id="@+id/merged_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:tag="modal-appbar"
            app:layout_behavior="@string/MergedAppBarLayoutBehavior">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <View
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/primary1"
                    android:layout_gravity="bottom"/>
            <android.support.v7.widget.Toolbar
                    android:id="@+id/expanded_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/key_binding_default_toolbar_name"
                    app:navigationIcon="@drawable/ic_close_white_24dp"/>
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>